[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/ItemButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/LootPanel.gd" type="Script" id=2]
[ext_resource path="res://interface/quest_board/panel.png" type="Texture" id=3]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=6]

[node name="LootPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
item_button = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1200.0
margin_bottom = 600.0
rect_min_size = Vector2( 1200, 712 )
texture = ExtResource( 3 )
patch_margin_left = 52
patch_margin_top = 52
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopSpacer" type="Control" parent="Background/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="MainElements" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 68.0
margin_right = 1200.0
margin_bottom = 644.0
size_flags_vertical = 3

[node name="LeftSpacer" type="Control" parent="Background/VBoxContainer/MainElements"]
margin_right = 64.0
margin_bottom = 576.0
rect_min_size = Vector2( 64, 0 )

[node name="LootSlots" type="ScrollContainer" parent="Background/VBoxContainer/MainElements"]
margin_left = 68.0
margin_right = 708.0
margin_bottom = 576.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/LootSlots"]
margin_right = 640.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemInspector" type="VBoxContainer" parent="Background/VBoxContainer/MainElements"]
margin_left = 712.0
margin_right = 1132.0
margin_bottom = 576.0
rect_min_size = Vector2( 420, 0 )
custom_constants/separation = 16

[node name="ItemInspector1" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_right = 420.0
margin_bottom = 280.0
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_right = 420.0
margin_bottom = 68.0
text = "Item Name"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1"]
margin_top = 72.0
margin_right = 420.0
margin_bottom = 280.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_right = 352.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer"]
margin_right = 352.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats"]
margin_right = 352.0
margin_bottom = 68.0

[node name="StatName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_right = 174.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Atk"

[node name="StatValue" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "420"

[node name="Defense" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats"]
margin_top = 72.0
margin_right = 352.0
margin_bottom = 140.0

[node name="StatName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Defense"]
margin_right = 174.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Def"

[node name="StatValue" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer/ScrollContainer/Stats/Defense"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "420"

[node name="ItemIcon" type="TextureRect" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector1/HBoxContainer"]
margin_left = 356.0
margin_right = 420.0
margin_bottom = 208.0
rect_min_size = Vector2( 64, 64 )
expand = true

[node name="ItemInspector2" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector"]
margin_top = 296.0
margin_right = 420.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2"]
margin_right = 420.0
margin_bottom = 68.0
text = "Item Name"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2"]
margin_top = 72.0
margin_right = 420.0
margin_bottom = 280.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer"]
margin_right = 352.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer"]
margin_right = 352.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats"]
margin_right = 352.0
margin_bottom = 68.0

[node name="StatName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_right = 174.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Atk"

[node name="StatValue" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "420"

[node name="Defense" type="HBoxContainer" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats"]
margin_top = 72.0
margin_right = 352.0
margin_bottom = 140.0

[node name="StatName" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Defense"]
margin_right = 174.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Def"

[node name="StatValue" type="Label" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Defense"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "420"

[node name="ItemIcon" type="TextureRect" parent="Background/VBoxContainer/MainElements/ItemInspector/ItemInspector2/HBoxContainer"]
margin_left = 356.0
margin_right = 420.0
margin_bottom = 208.0
rect_min_size = Vector2( 64, 64 )
expand = true

[node name="RightSpacer" type="Control" parent="Background/VBoxContainer/MainElements"]
margin_left = 1136.0
margin_right = 1200.0
margin_bottom = 576.0
rect_min_size = Vector2( 64, 0 )

[node name="BottomSpacer" type="Control" parent="Background/VBoxContainer"]
margin_top = 648.0
margin_right = 1200.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 64 )
